<resources>
    <string name="app_name">Majika</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_twibbon">Twibbon</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_branch">Branch</string>
    <string name="menu_cart">Cart</string>

    <!--    Menu Dummy -->
    <string name="menu_item_name">Menu Item Name</string>
    <string name="menu_item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tellus felis, maximus at iaculis in, imperdiet commodo lorem. Nam eget purus urna. In nunc velit, rutrum non risus vitae, pretium lacinia ex. Fusce malesuada sapien enim, vitae tincidunt ante tincidunt at. Etiam non felis scelerisque, porttitor enim non, vestibulum lacus. Morbi nec maximus enim. Fusce lacus nibh, semper quis nisl nec, viverra suscipit leo. Donec porttitor vitae leo quis faucibus. Curabitur nisi urna, varius nec molestie a, molestie et libero. In vel odio maximus, auctor est a, ultrices enim. Quisque porta purus non lectus varius, nec maximus ex volutpat. Duis at augue non dui interdum convallis sit amet id magna. Sed nec sapien vel nunc facilisis faucibus vel vitae nibh. Vestibulum tempor, risus vel elementum pellentesque, libero arcu scelerisque risus, id consequat augue odio eu nisl. Suspendisse potenti. Vestibulum eget ultrices purus.</string>
    <string name="menu_item_price">100.000</string>
    <string name="menu_item_sold">Sold: 100</string>
    <string name="menu_item_currency">IDR</string>

    <!--    Errors -->
    <string name="error_no_menu_found">Menu Not Found</string>
    <string name="capture_btn_take">Capture</string>
    <string name="twibbon_img_description">Twibbon overlay image</string>
    <string name="capture_btn_retake">Retake</string>
    <string name="status_title_pay_scanning">Scan payment…</string>
    <string name="status_title_pay_checking">Payment detected, checking…</string>
    <string name="status_title_pay_done">Payment success! Back to main in %d…</string>
    <string name="total_payment_text">Total: %s</string>
    <string name="status_img_payment_desc">Payment status icon</string>
    <string name="status_body_pay_success">Success!</string>
    <string name="status_desc_pay_success">Payment is done!</string>
    <string name="status_body_pay_fail">Fail!</string>
    <string name="status_desc_pay_fail">Payment is not done yet!</string>
    <string name="try_again_pay_btn">Try Again</string>
    <string name="status_title_pay_failed">Payment failed!</string>
    <string name="search">Search</string>
    <string name="status_branch_na">Cannot get the data from server.</string>
    <string name="status_branch_empty">No branch available.</string>
    <string name="switch_camera_desc_btn">Switch camera</string>
    <string name="branch_phone_text">%s a.n. %s</string>
    <string name="branch_loc_desc_btn">Branch Location</string>
    <string name="branch_call_desc_btn">Call the branch</string>
    <string name="branch_fav_food_text">Favorite Food: %s</string>
    <string name="refreshbutton">Refresh</string>


    <!--    Menu Types -->
    <string-array name="menu_types">
        <item>Food</item>
        <item>Drink</item>
    </string-array>
</resources>