<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="335dp"
        android:layout_height="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41">

    </androidx.camera.view.PreviewView>

    <TextView
        android:id="@+id/statusTitleText"
        android:layout_width="316dp"
        android:layout_height="74dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/status_title_pay_scanning"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/previewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewView"
        app:layout_constraintVertical_bias="0.218">

        <TextView
            android:id="@+id/priceTotalText"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/total_payment_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/statusImg"
                android:layout_width="89dp"
                android:layout_height="67dp"
                android:contentDescription="@string/status_img_payment_desc"
                android:src="@drawable/ic_status_fail" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/statusBodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_body_pay_success"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/statusDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_desc_pay_success"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/tryAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again_pay_btn"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.189" />

</androidx.constraintlayout.widget.ConstraintLayout>