<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    tools:context=".components.BottomNav"
    android:padding="3sp"
    android:background="@color/design_default_color_primary">

    <Button
        android:id="@+id/nav_button_twibbon"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:backgroundTint="@color/design_default_color_primary"
        android:drawableTop="@drawable/ic_twibbon_black_24dp"
        android:drawableTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="10dp"
        android:text="@string/menu_twibbon"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/nav_button_branch"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:backgroundTint="@color/design_default_color_primary"
        android:drawableTop="@drawable/ic_branch_black_24dp"
        android:drawableTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="10dp"
        android:text="@string/menu_branch"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/nav_button_menu"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:backgroundTint="@color/design_default_color_primary"
        android:drawableTop="@drawable/ic_menu_black_24dp"
        android:drawableTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="10dp"
        android:text="@string/menu_menu"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/nav_button_cart"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:backgroundTint="@color/design_default_color_primary"
        android:drawableTop="@drawable/ic_cart_black_24dp"
        android:drawableTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="10dp"
        android:text="@string/menu_cart"
        android:textColor="@color/white"
        android:textSize="12sp" />
</LinearLayout>