<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:paddingHorizontal="4dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/menu_item_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/menu_item_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_sold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_item_description"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:fontFamily="sans-serif-light"
            android:justificationMode="inter_word"
            android:text="@string/menu_item_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="144dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <ImageButton
                android:id="@+id/menu_add_to_cart"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:contentDescription="remove from cart"
                android:src="@drawable/ic_plus_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/design_default_color_on_primary" />

            <ImageButton
                android:id="@+id/menu_remove_from_cart"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:contentDescription="remove from cart"
                android:src="@drawable/ic_minus_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/design_default_color_on_primary" />

            <TextView
                android:id="@+id/menu_cart_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/menu_add_to_cart"
                app:layout_constraintStart_toStartOf="@+id/menu_remove_from_cart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/menu_item_currency"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:fontFamily="sans-serif-black"
            android:text="@string/menu_item_currency"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/menu_item_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:fontFamily="sans-serif-medium"
            android:text="@string/menu_item_price"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>